# idea2spec

./: .env.example  .gitignore  .markdownlintignore  AGENTS.md  Makefile  README.md  pyproject.toml
apps/web/: env.example  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ArchitectureView.tsx  BusinessView.tsx  ControlPanel.tsx  PRDView.tsx  TasksView.tsx
apps/web/lib/: api.ts
docs/: next-steps-and-visualization.md  preview-approve-flow.md  tech-stack.md
docs/requirements/: chatgpt-1.md  chatgpt-2.md  kb.md
docs/superpowers/specs/: 2026-06-24-ai-project-cto-design.md  2026-06-24-productization-p0.md
scripts/: cli.py  init_db.sql  reset.sh
services/agent_runtime/: __init__.py  agents.py  workflow.py
services/api/: db.py  export.py  main.py  store.py
services/llm_router/: __init__.py  config.py  router.py
tests/: test_export.py  test_json_extraction.py  test_router_config.py  test_store.py
